--- a/Lab1/Lab1_SJZ_22Jan24.Rmd
+++ b/Lab1/Lab1_SJZ_22Jan24.Rmd
@@ -352,7 +352,9 @@ Together, these elements could be used to assess the effect of elevation on dete
 
 
 
+# Grade
 
+$\color{red}{\text{Perfect. Outstanding work, Stephen.}}$
 
 
 
